# renderman

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  envp.py  index.json  main.py  pyproject.toml  renderer.py
.github/workflows/: docker-publish.yml  docker-test.yml
renderman/: __main__.py  docker_test.py
templates/: index.html
