[tool.poetry]
name = "renderman"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
flask = "^1.1.2"
schema = "^0.7.4"
sympy = "^1.8"
cloudinary = "^1.25.0"
Flask-Cors = "^3.0.10"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
