[tool.poetry]
name = "renderman"
version = "1.0.0"
description = ""
authors = ["7d <61975820+iiiii7d@users.noreply.github.com>"]
license = "gpl-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
tile-renderer = "^4.0.0"
rich = "^13.3.4"
psutil = "^5.9.5"
dill = "^0.3.6"
ray = "^2.3.1"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pip = "^23.1.1"
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.12.0"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "N", "U", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "EM", "EXE",
    "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TCH", "INT", "ARG", "PTH", "ERA",
    "PGH", "PL", "TRY", "RUF"]
ignore = ["E501", "ANN401", "A003", "ANN101", "ANN102", "SLF001", "PLR2004", "PLR0913", "TRY003", "EM101", "EM102"]