[tool.poetry]
name = "renderman"
version = "1.0.0"
description = ""
authors = ["7d <61975820+iiiii7d@users.noreply.github.com>"]
license = "gpl-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
tile-renderer = "^4.0.1"
rich = "^13.6.0"
psutil = "^5.9.5"
dill = "^0.3.7"
ray = "^2.7.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
pip = "^24.0"
black = "^24.1.1"
mypy = "^1.5.1"
isort = "^5.12.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "N", "U", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "EM", "EXE",
    "ISC", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TCH", "INT", "ARG", "PTH", "ERA",
    "PGH", "PL", "TRY", "RUF"]
ignore = ["E501", "ANN401", "A003", "ANN101", "ANN102", "SLF001", "PLR2004", "PLR0913", "TRY003", "EM101", "EM102"]